added start button functionality

--- a/game/index.html
+++ b/game/index.html
@@ -12,8 +12,8 @@
         <h1>Submarine Adventure!</h1>
         <div id="game">
             <canvas id="game-canvas"></canvas>
-            <div id="start-screen">
-                <h2>Press SPACE to start!</h2>
+            <div tabindex="-1" id="start-screen">
+                <h2 id="start-title">Press SPACE to start!</h2>
             </div>
         </div>
         <div id="game-info">
