--- a/game/index.html
+++ b/game/index.html
@@ -6,6 +6,8 @@
     <title>Submarine Adventure</title>
     <link rel="stylesheet" href="style.css">
     <script defer src="game.js"></script>
+    <script defer src="submarine.js"></script>
+    <script defer src="rock.js"></script>
 </head>
 <body>
     <main>
