--- a/game/index.html
+++ b/game/index.html
@@ -8,6 +8,7 @@
     <script defer src="game.js"></script>
     <script defer src="submarine.js"></script>
     <script defer src="rock.js"></script>
+    <script defer src="generators.js"></script>
 </head>
 <body>
     <main>
