--- a/game/index.html
+++ b/game/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Submarine Adventure</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script defer src="game.js"></script>
     <script defer src="submarine.js"></script>
     <script defer src="rock.js"></script>
     <script defer src="generators.js"></script>
+    
 </head>
 <body>
     <main>
