--- a/game/index.html
+++ b/game/index.html
@@ -7,6 +7,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <link rel="stylesheet" href="style.css">
     <script defer src="game.js"></script>
     <script defer src="submarine.js"></script>
@@ -16,7 +20,9 @@
 </head>
 <body>
     <main>
-        <h1>Submarine Adventure!</h1>
+        <div id="title-div">
+            <h1 class="animate__animated animate__slower animate__heartBeat animate__infinite">Submarine Adventure!</h1>
+        </div>
         <div id="game">
             <canvas id="game-canvas"></canvas>
             <div tabindex="-1" id="start-screen">
