--- a/pseudo-3d/index.html
+++ b/pseudo-3d/index.html
@@ -1,16 +1,3 @@
-<!--<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>My first three.js app</title>
-		<style>
-			body { margin: 0; }
-		</style>
-		<script type="module" src="/scripts.js"></script>
-	</head>
-	<body>
-	</body>
-</html>-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -24,11 +11,11 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-    <!--<script defer src="game.js"></script>
-    <script defer src="submarine.js"></script>
-    <script defer src="rock.js"></script>
-    <script defer src="generators.js"></script>-->
-	<script type="module" src="/scripts.js"></script>
+    <script defer type="module" src="game.js"></script>
+    <!--<script defer src="submarine.js"></script>
+    <script defer type="module" src="rock.js"></script>
+    <script defer type="module" src="generators.js"></script>-->
+	<!--<script type="module" src="/scripts.js"></script>-->
 	<link defer rel="stylesheet" href="style.css">
     
 </head>
