added some sprite rotation + todo for death animation

--- a/pseudo-3d/index.html
+++ b/pseudo-3d/index.html
@@ -12,9 +12,9 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
     <script defer type="module" src="game.js"></script>
-    <!--<script defer src="submarine.js"></script>
+    <script defer type="module" src="submarine.js"></script>
     <script defer type="module" src="rock.js"></script>
-    <script defer type="module" src="generators.js"></script>-->
+    <script defer type="module" src="generators.js"></script>
 	<!--<script type="module" src="/scripts.js"></script>-->
 	<link defer rel="stylesheet" href="style.css">
     
