added html stylings

--- a/pseudo-3d/index.html
+++ b/pseudo-3d/index.html
@@ -20,10 +20,12 @@
     
 </head>
 <body>
-    <main>
+    <header>
         <div id="title-div">
             <h1 class="animate__animated animate__slower animate__heartBeat animate__infinite">Submarine Adventure!</h1>
         </div>
+    </header>
+    <main>
         <div id="game">
             <canvas id="game-canvas"></canvas>
             <div tabindex="-1" id="start-screen">
@@ -37,5 +39,8 @@
             <p>S to float down</p>
         </div>
     </main>
+    <footer>
+        <p>&copy; - 2024 For Educational Use Only</p>
+    </footer>
 </body>
 </html>
